# surveys_dashboard1

./: .dockerignore  .gitignore  API_ENDPOINTS.md  COST_EFFICIENCY_ANALYSIS.md  DEPLOYMENT_GUIDE.md  ENDPOINT_STATUS_REPORT.md  README.md  altair.py  app.py  app_minimal.py  app_simple.py  app_simple_queries.py  app_smart.py  app_ultra_minimal.py  app_working.py  auth_config.py  backend_client.py  backend_client_new.py  bigquery_database.py  chart_utils.py  check_data.py  config.py  dashboard.py  database.py  database_schema.sql  debug_connection.py  deploy-google-cloud.sh  diagnose_data.py  env_template.txt  find_surveys.py  google-cloud-security.md  main.py  package-lock.json  patch_home_metrics.py  pyproject.toml  requirements-basic.txt  requirements-full.txt  requirements-minimal.txt  requirements.txt  requirements_minimal.txt  (+11 more)
.streamlit/: config.toml
dashboard_pages/: advanced_filters.py  brands.py  cellphone_survey.py  comprehensive_analytics.py  convenience_store.py  demographics.py  funeral_cover.py  funeral_cover_old.py  health.py  profile_survey.py  profile_surveys.py  survey_questions.py
pages/: __init__.py
styles/: card_style.py  global_styles.py
